example/SyntaxError/flow_block_error.pione
Rule ABC
  input '*.a'
  output '*.b'
Flow
End
